konst/tests/misc_tests/destructure_rec_ui_tests/disallowed_pat_syntax-err.stderr
error: `..` not allowed as non-nested pattern
 --> tests/misc_tests/destructure_rec_ui_tests/disallowed_pat_syntax-err.rs:3:42
  |
3 | const _: () = { konst::destructure_rec!{ .. = 10 }; };
  |                                          ^
  |
  = note: this error originates in the macro `konst::destructure_rec` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected non-identifier after path/identifier
 --> tests/misc_tests/destructure_rec_ui_tests/disallowed_pat_syntax-err.rs:5:46
  |
5 | const _: () = { konst::destructure_rec!{ foo bar = 10 }; };
  |                                              ^^^
  |
  = note: this error originates in the macro `konst::destructure_rec` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `mut` on a binding may not be repeated
 --> tests/misc_tests/destructure_rec_ui_tests/disallowed_pat_syntax-err.rs:7:46
  |
7 | const _: () = { konst::destructure_rec!{ mut mut bar = 10 }; };
  |                                              ^^^
  |
help: remove the additional `mut`s
  |
7 - const _: () = { konst::destructure_rec!{ mut mut bar = 10 }; };
7 + const _: () = { konst::destructure_rec!{ mut bar = 10 }; };
  |

error: no rules expected `@`
 --> tests/misc_tests/destructure_rec_ui_tests/disallowed_pat_syntax-err.rs:9:51
  |
9 | const _: () = { konst::destructure_rec!{ foo @ [] @ _ = [] }; };
  |                                                   ^ no rules expected this token in macro call
  |
note: while trying to match `=`
 --> src/macros/destructuring_rec.rs
  |
  |         = $expr:expr $(;)?
  |         ^

error: literal patterns aren't allowed
  --> tests/misc_tests/destructure_rec_ui_tests/disallowed_pat_syntax-err.rs:14:42
   |
14 | const _: () = { konst::destructure_rec!{ 10..20 = 10 }; };
   |                                          ^^
   |
   = note: this error originates in the macro `konst::destructure_rec` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unexpected end of pattern
  --> tests/misc_tests/destructure_rec_ui_tests/disallowed_pat_syntax-err.rs:16:43
   |
16 | const _: () = { konst::destructure_rec!{ A..B = 10 }; };
   |                                           ^
   |
   = note: this error originates in the macro `konst::destructure_rec` (in Nightly builds, run with -Z macro-backtrace for more info)

error: macros in pattern position aren't allowed
  --> tests/misc_tests/destructure_rec_ui_tests/disallowed_pat_syntax-err.rs:22:45
   |
22 | const _: () = { konst::destructure_rec!{ foo!() = &mut 10 }; };
   |                                             ^
   |
   = note: this error originates in the macro `konst::destructure_rec` (in Nightly builds, run with -Z macro-backtrace for more info)
